# uGet

./: .gitignore  CMakeLists.txt
uget/: CMakeLists.txt
uglib/: CMakeLists.txt
ui-gtk/: CMakeLists.txt
